...
        android:onClick="onClickTravelModeBtn"
        android:text="Driving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickTravelModeBtn"
        android:text="Walking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickTravelModeBtn"
        android:text="Cycling"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="15dp"
        android:text="Open Menu"
        android:onClick="onClickOpenMenuBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seller_orders_button"
...
        android:onClick="onClickOpenProfileBtn"
        android:text="PROFILE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/order_history_button"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="232dp"
        android:layout_marginBottom="64dp"
        android:onClick="onClickToOrderHistory"
        android:text="Order History"
...
